--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
-    "validator": "^13.6.0",
-    "xss-clean": "^0.1.1"
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
